--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>School Account</title>
+    <title>Geek School</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
